--- a/applications/album-service/build.gradle
+++ b/applications/album-service/build.gradle
@@ -14,5 +14,8 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
 
+    compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:$springSecurityOAuthAutoconfigVersion"
+    compile "io.pivotal.spring.cloud:spring-cloud-sso-connector:$springCloudSsoVersion"
+
     compile "mysql:mysql-connector-java:$mysqlVersion"
 }
