--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
         slf4jVersion = "1.7.25"
         junitVersion = "4.12"
         mysqlVersion = "5.1.40"
+        springCloudVersion = "Finchley.SR2"
+        springCloudSsoVersion = "2.1.3.RELEASE"
+        springSecurityOAuthAutoconfigVersion = "2.1.0.RELEASE"
     }
 
     repositories {
@@ -14,6 +17,14 @@ buildscript {
 
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
+    }
+}
+
+apply plugin: "io.spring.dependency-management"
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
     }
 }
 
